# swimmer_solver_mpm

./: README.md  main.py  pyproject.toml  render_video.py  requirements.txt
config/: default.yaml
examples/: custom_scene.py  custom_shape.py  elastic_sweep.py  fish_swim.py  jellyfish_cell.py  mpm_vs_sph.py  poisson_sweep.py  rigid_drop.py  swimmer_showcase.py  swimmer_void_diagnostic.py  viscosity_showcase.py  whole_swimmer.py
src/swimmers/: __init__.py  materials.py  render.py  scenes.py  sim.py  solver.py  sph_solver.py
